# gyroflow

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  __env-android.ps1  __env-ios.sh  __env-linux.sh  __env-macos.sh  __env.ps1  build-fcpx-plugin.yml  build.rs  compile_android.txt  mywork.md  publish.sh
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ios.yml  release.yml
_deployment/: build-android.ps1  deploy-linux.sh  deploy-macos.sh  deploy-windows.bat
_deployment/android/: AndroidManifest.xml  android-deploy.json
_deployment/ios/: Archive.plist  Entitlements.plist  Info.plist  LaunchScreen.storyboard  PrivacyInfo.xcprivacy  qml_plugins.cpp
_deployment/linux/: AppImageBuilder.yml  build-appimage.sh  gschemas.compiled
_deployment/windows/: AppxManifest.xml  Gyroflow_with_console.bat  _copy_dlls.bat  installer.wxs
_scripts/: android.just  common.just  ios.just  linux.just  macos.just  windows.just
android/: AndroidManifest.xml  android-deploy.json
ext/: install-deps-ios.sh  install-deps-linux.sh  install-deps-mac.sh
resources/: android_image.psd  camera_database.json  camera_registry.json  icon_android.psd  icon_mobile.psd  icons.cdr
resources/camera_database/: build.py  camera_database.json
resources/icons/: index.theme
resources/id - Copy/: Caddx_Walnut_Wide_30_4k_4by3_4000x3000-29.97fps.json  Insta360_OneRS_1inch 5.7k_NO-EIS_5k_16by9_5312x2988-29.97fps.json  Insta360_OneRS_5K25 10mm MFT Laowa_NO-EIS_5k_16by9_5312x2988-25.00fps.json  Insta360_OneRS_5k25 7.5mm Laowa MFT_NO-EIS_5k_16by9_5312x2988-25.00fps.json  Insta360_OneRS_Ultrawide 110_NO-EIS_5k_16by9_5312x2988-25.00fps.json  Insta360_OneR_4k_NO-EIS_4k_4by3_4000x3000-29.97fps.json  Insta360_OneR_6mm Laowa MFT Cine 5k_NO-EIS_5k_16by9_5312x2988-25.00fps.json  (+81 more)
scripts/: lens_profile_schema_guard.py
src/: cli.rs  controller.rs  gyroflow.rs  lib.rs  main.rs  nle_plugins.rs  resources.rs  resources_qml.rs  ui_live_reload.cpp  util.rs
src/core/: Cargo.toml  adaptive_zoom.rs  build.rs  camera_database.rs  camera_identifier.rs  camera_registry.rs  canonical_camera_database.rs  color_grading.rs  filtering.rs  gyro_export.rs  gyro_replace.rs  gyro_source.rs  integration.rs  integration_complementary.rs  integration_complementary_v2.rs  integration_vqf.rs  keyframes.rs  lens_calibration.rs  lens_profile.rs  lens_profile_database.rs  lensfun.rs  lensfun_database.rs  lensfun_import.rs  lensfun_integration.rs  lensfun_xml.rs  lib.rs  lut.rs  mod.rs  optical_flow_stabilizer.rs  processing_params.rs  settings.rs  stabilization_params.rs  stmap.rs  undistortion.rs  util.rs
src/core/calibration/: drawing.rs  lens_profile.rs  mod.rs
src/core/examples/: export_camera_registry.rs
src/core/filesystem/: android.rs  apple.rs  mod.rs
src/core/gpu/: drawing.rs  mod.rs  opencl.rs  opencl_undistort.cl  wgpu.rs  wgpu_interop.rs  wgpu_interop_android.rs  wgpu_interop_cuda.rs  wgpu_interop_directx.rs  wgpu_interop_metal.rs  wgpu_interop_vulkan.rs  wgpu_undistort.wgsl
src/core/gpu/compiled/: stabilize.frag.qsb  stabilize.spv  stabilize_u32.spv
src/core/gpu/shader_builder/: Cargo.toml  build.rs  rust-toolchain.toml
src/core/gpu/shader_builder/src/: main.rs
src/core/gpu/stabilize_spirv/: Cargo.toml
src/core/gpu/stabilize_spirv/src/: background.rs  drawing.rs  interpolate.rs  lens.rs  lib.rs  stabilize.rs  types.rs
src/core/gpu/stabilize_spirv/src/distortion_models/: digital_stretch.rs  generic_polynomial.rs  gopro.rs  gopro_hyperview.rs  gopro_superview.rs  gopro_warp.rs  insta360.rs  mod.rs  opencv_fisheye.rs  opencv_standard.rs  poly3.rs  poly5.rs  ptlens.rs  sony.rs
src/core/gyro_source/: canon.rs  catmull_rom.rs  file_metadata.rs  imu_transforms.rs  mod.rs  sony.rs  splines.rs
src/core/imu_integration/: complementary_v2.rs  mod.rs  vqf.rs
src/core/smoothing/: default_algo.rs  default_algo_2.rs  fixed.rs  focal_length.rs  horizon.rs  mod.rs  motion_direction.rs  none.rs  plain.rs  velocity_dampened.rs  velocity_dampened2.rs  velocity_dampened_advanced.rs  velocity_dampened_axis.rs  velocity_dampened_v1.rs
src/core/src/optical_flow/: mod.rs  mod_export.rs  stabilizer.rs
src/core/stabilization/: compute_params.rs  cpu_undistort.rs  frame_transform.rs  interpolation.rs  mod.rs  pixel_formats.rs
src/core/stabilization/distortion_models/: digital_stretch.glsl  digital_stretch.rs  generic_polynomial.cl  generic_polynomial.glsl  generic_polynomial.rs  generic_polynomial.wgsl  gopro.cl  gopro.glsl  gopro.rs  gopro.wgsl  gopro6_superview.glsl  gopro6_superview.rs  gopro_hyperview.glsl  gopro_hyperview.rs  gopro_superview.glsl  gopro_superview.rs  gopro_warp.glsl  gopro_warp.rs  insta360.cl  insta360.glsl  insta360.rs  insta360.wgsl  mod.rs  opencv_fisheye.cl  opencv_fisheye.glsl  opencv_fisheye.rs  opencv_fisheye.wgsl  opencv_standard.cl  opencv_standard.glsl  opencv_standard.rs  opencv_standard.wgsl  poly3.cl  poly3.glsl  poly3.rs  poly3.wgsl  poly5.cl  poly5.glsl  poly5.rs  poly5.wgsl  ptlens.cl  (+7 more)
src/core/synchronization/: akaze.rs  autosync.rs  cpp_wrapper.rs  find_offset.rs  find_offset_rssync.rs  find_offset_visually.rs  mod.rs  opencv.rs  opencv_dis.rs  optimsync.rs
src/core/synchronization/estimate_pose/: almeida.rs  eight_point.rs  find_essential_mat.rs  find_homography.rs  mod.rs
src/core/synchronization/find_offset/: essential_matrix.rs  rs_sync.rs  visual_features.rs
src/core/synchronization/optical_flow/: akaze.rs  gmflow.rs  mod.rs  opencv_dis.rs  opencv_pyrlk.rs
src/core/undistortion/: compute_params.rs  cpu_undistort.rs  frame_transform.rs  mod.rs  pixel_formats.rs
src/core/undistortion/distortion_models/: mod.rs  opencv_fisheye.glsl
src/core/zooming/: adaptive.rs  adaptive_new.rs  field_of_view.rs  fov_default.rs  fov_direct.rs  fov_iterative.rs  mod.rs  zoom_disabled.rs  zoom_dynamic.rs  zoom_static.rs
tests/: test_import_lensfun.py
tools/: README.md  build_camera_database.py  import_lensfun.py  parse_lensfun.py
(+5494 files in other folders)
