[package]
name = "gyroflow"
version = "1.5.4"
authors = ["Adrian <adrian.eddy@gmail.com>", "Elvin Chen"]
edition = "2021"
build = "build.rs"

[features]
default = ["opencv"]
opencl = ["gyroflow-core/use-opencl"]
opencv = ["gyroflow-core/use-opencv"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
gyroflow-core = { path = "src/core/", features = ["use-opencv", "use-opencl"] }
system_shutdown = { git = "https://github.com/risoflora/system_shutdown.git", rev = "4d93e5e" }
breakpad-sys = "0.2.0"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
gyroflow-core = { path = "src/core/", features = ["use-opencv"] }

[dependencies]
cstr = "0.2.11"
cpp = "0.5.9"
serde = "1.0"
serde_json = "1.0"
bytemuck = "1.14.0"
nalgebra = "0.32"
semver = "1.0.20"
fastrand = "2.0.1"
itertools = "0.12.0"
regex = "1.10.2"
rayon = "1.8"

pollster = "0.3.0"
futures-intrusive = "0.5.0"
flate2 = "1.0.28"
walkdir = "2.4.0"
mp4-merge = "0.1.6"
human-sort = "0.2.2"
argh = "0.1.12"
indicatif = "0.17"
rustfft = "6.1.0"
crc32fast = "1.3.2"
rodio = { default-features = false, features = ["vorbis"], version = "0.17.3" }
filetime_creation = "0.1"
directories = "5"

qmetaobject = { version = "0.2.10", default-features = false, features = ["log"] }
qttypes     = { version = "0.2.11", default-features = false, features = ["required", "qtquick", "qtquickcontrols2"]}
qml-video-rs = { git = "https://github.com/AdrianEddy/qml-video-rs.git", rev = "63f35bf" }
#qml-video-rs = { path = "../qml-video-rs" }

ffmpeg-next = { version = "6.1.0", default-features = false, features = ["codec", "filter", "format", "software-resampling", "software-scaling"] }
lazy_static = "1.4.0"
parking_lot = "0.12.1"

simplelog = { git = "https://github.com/Drakulix/simplelog.rs.git", rev = "4ef071d" }
log = "0.4"

ureq = "2.9.1"
url = "2.5.0"
whoami = "1.4.1"
tar = "0.4.40"
lru = "0.12"

log-panics = { version = "2.1", features = ["with-backtrace"] }

keep-awake = { git = "https://github.com/AdrianEddy/keep-awake-rs.git", rev = "1b5eaad" }

[patch.crates-io]
fc-blackbox = { git = "https://github.com/AdrianEddy/fc-blackbox.git",    rev = "4e9e4e6" }
qmetaobject = { git = "https://github.com/AdrianEddy/qmetaobject-rs.git", rev = "59029b9" }
qttypes     = { git = "https://github.com/AdrianEddy/qmetaobject-rs.git", rev = "59029b9" }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.52.0"
features = [ "Win32_System_Com", "Win32_System_Console", "Win32_System_SystemServices", "Win32_UI_Shell", "Win32_Foundation", "Wdk_Foundation", "Win32_System_LibraryLoader",
             "Win32_Graphics_Dwm", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Dxgi",
             "Win32_Security", "Win32_Security_Authorization", "Win32_System_WindowsProgramming", "Win32_System_Threading", "Win32_System_Registry",
             "Win32_Storage_Packaging_Appx" ]

[target.'cfg(target_os = "macos")'.dependencies]
oslog = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
metal = "0.27"
core-foundation-sys = "0.8.6"

[build-dependencies]
cpp_build = "0.5.9"
winres = "0.1.12"
walkdir = "2.4.0"
cc = "=1.0.79"

[[bin]]
name = "gyroflow"
path = "src/gyroflow.rs"

[profile.profile]
inherits = "release"
debug = true

[profile.deploy]
inherits = "release"
lto = true
codegen-units = 1

# -------------------------- Android stuff --------------------------

# [lib]
# crate-type = ["cdylib"]
# name = "gyroflow"
# path = "src/gyroflow.rs"

[package.metadata.android]
build_targets = [ "aarch64-linux-android" ]

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 33

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk = { version = "0.8", features = ["media", "api-level-26"] }
ndk-sys = { version = "0.5.0" }
ndk-context = "0.1.1"
