[package]
name = "gyroflow"
version = "1.6.1"
authors = ["Adrian <adrian.eddy@gmail.com>", "Elvin Chen"]
edition = "2021"
build = "build.rs"

[features]
default = ["opencv"]
opencl = ["gyroflow-core/use-opencl"]
opencv = ["gyroflow-core/use-opencv"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
gyroflow-core = { path = "src/core/", features = ["use-opencv", "use-opencl"] }
system_shutdown = { git = "https://github.com/risoflora/system_shutdown.git", rev = "48ac516" }
breakpad-sys = "0.2.0"
trash = "5.2"
# For nle_plugins
zip = { version = "=2.5", default-features = false, features = ["deflate-flate2", "flate2"] }
zip-extensions = { version = "0.8", default-features = false, features = ["deflate-flate2"] }
runas = "1.2"
tempfile = "3"
fs_extra = "1.3"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
gyroflow-core = { path = "src/core/", features = ["use-opencv"] }

[dependencies]
cstr = "0.2.12"
cpp = "0.5.9"
serde = "1.0"
serde_json = "1.0"
bytemuck = "1.19.0"
nalgebra = "0.33"
semver = "1.0.26"
fastrand = "2.1.0"
itertools = "0.14.0"
regex = "1.10.6"
rayon = "1.10"

pollster = "0.4.0"
futures-intrusive = "0.5.0"
flate2 = "1.0.35"
walkdir = "2.5.0"
mp4-merge = "0.1.10"
human-sort = "0.2.2"
argh = "0.1.13"
indicatif = "0.17"
rustfft = "6.2.0"
crc32fast = "1.4.2"
rodio = { default-features = false, features = ["vorbis"], version = "0.20.1" }
filetime_creation = "0.2"

qmetaobject = { version = "0.2.10", default-features = false, features = ["log"] }
qttypes     = { version = "0.2.12", default-features = false, features = ["required", "qtquick", "qtquickcontrols2"]}
qml-video-rs = { git = "https://github.com/AdrianEddy/qml-video-rs.git", rev = "2a3bd8b" }
#qml-video-rs = { path = "../qml-video-rs" }

ffmpeg-next = { version = "7.1.0", default-features = false, features = ["codec", "filter", "format", "software-resampling", "software-scaling"] }
lazy_static = "1.5.0"
parking_lot = "0.12.3"

simplelog = "0.12.2"
log = "0.4"

ureq = "3.0"
url = "2.5.4"
whoami = "1.5.2"
tar = "0.4.44"
lru = "0.13"
chrono = "0.4"

log-panics = { version = "2.1", features = ["with-backtrace"] }

keep-awake = { git = "https://github.com/AdrianEddy/keep-awake-rs.git", rev = "04ce779" }

[patch.crates-io]
qmetaobject = { git = "https://github.com/AdrianEddy/qmetaobject-rs.git", rev = "ff1e23d" }
qttypes     = { git = "https://github.com/AdrianEddy/qmetaobject-rs.git", rev = "ff1e23d" }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58.0"
features = [ "Win32_System_Com", "Win32_System_Console", "Win32_System_SystemServices", "Win32_UI_Shell", "Win32_Foundation", "Wdk_Foundation", "Win32_System_LibraryLoader",
             "Win32_Graphics_Dwm", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Dxgi",
             "Win32_Security", "Win32_Security_Authorization", "Win32_System_WindowsProgramming", "Win32_System_Threading", "Win32_System_Registry",
             "Win32_Storage_Packaging_Appx", "Win32_Storage_FileSystem" ]

[target.'cfg(target_os = "macos")'.dependencies]
oslog = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
metal = { version = "0.31.0" }
core-foundation-sys = "0.8.7"

[build-dependencies]
cpp_build = "0.5.9"
winres = "0.1.12"
walkdir = "2.5.0"
cc = "1.2"

[[bin]]
name = "gyroflow"
path = "src/gyroflow.rs"

[profile.profile]
inherits = "release"
debug = true

[profile.deploy]
inherits = "release"
lto = true
codegen-units = 1

[dev-dependencies]
test-case = "3.3.1"

# -------------------------- Android stuff --------------------------

# [lib]
# crate-type = ["cdylib"]
# name = "gyroflow"
# path = "src/gyroflow.rs"

[package.metadata.android]
build_targets = [ "aarch64-linux-android" ]

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 34

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk = { version = "0.9", features = ["media", "api-level-26"] }
ndk-sys = { version = "0.6.0" }
ndk-context = "0.1.1"
