[package]
name = "gyroflow-core"
version = "1.5.4"
authors = ["Adrian <adrian.eddy@gmail.com>", "Elvin Chen"]
edition = "2021"
build = "build.rs"

[lib]
name = "gyroflow_core"
path = "lib.rs"

[dependencies]
#telemetry-parser = { path = "../../../telemetry-parser" }
telemetry-parser = { git = "https://github.com/AdrianEddy/telemetry-parser.git", rev = "395fba0" }
#ahrs = { version = "0.5.0", features = ["field_access"] }
ahrs = { git = "https://github.com/jmagnuson/ahrs-rs.git", rev = "bf7b41d", features = ["field_access"] }

stabilize_spirv = { path = "./gpu/stabilize_spirv" }

#rs-sync = { path = "../../../rs-sync" }
rs-sync = { git = "https://github.com/gyroflow/rs-sync.git", rev = "0d22978" }

argmin = { version = "0.10.0", default-features = false }
argmin-math = { version = "0.4.0", default-features = false, features = ["nalgebra_v0_32"] }

mimalloc = { version = "0.1.39", default-features = false }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
rayon = "1.10"
biquad = "0.4.2"
fastrand = "2.0.2"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
regex = "1.10.4"
bincode = "1.3.3"
serde = "1.0"
serde_json = "1.0"
crc32fast = "1.4.0"
byteorder = "1.5.0"
line_drawing = "1.0.0"
rand = "0.8.5"
time = { version = "0.3.36", features = ["local-offset"] }
itertools = "0.12.1"
num = "0.4.2"
base91 = "0.1.0"
bitflags = "2.5.0"
enum_delegate = "0.2.0"
simple-easing = "1.0.1"
half = "2.4.1"
lru = "0.12"
thiserror = "1.0.59"
ciborium = "0.2.2"
nt-hive = "0.2"
dyn-clone = "1.0.17"

akaze = { version = "*", git = "https://github.com/rust-cv/cv.git", rev = "82a25ee", features = ["rayon"] }
eight-point = { version = "*", git = "https://github.com/rust-cv/cv.git", rev = "82a25ee" }
cv-pinhole = { version = "*", git = "https://github.com/rust-cv/cv.git", rev = "82a25ee" }
cv-core = { version = "*", git = "https://github.com/rust-cv/cv.git", rev = "82a25ee" }
sample-consensus = "1.0.2"
arrsac = "0.10.0"
rand_xoshiro = "0.6.0"
image = { version = "0.24", default-features = false }
space = { version = "0.17", features = ["alloc"] }
bitarray = { version = "0.9", features = ["space"] }
enterpolation = "0.2.1"
libloading = "0.8"
libc = "0.2"
bytemuck = "1.15.0"
ash = "0.37.3"
pollster = "0.3.0"
futures-intrusive = "0.5.0"
flate2 = "1.0.28"
walkdir = "2.5.0"
url = "2.5.0"
urlencoding = "2.1.3"
log = "0.4"
ocl = { version = "0.19.7", optional = true }
ocl-interop = { version = "0.1.6", optional = true }
rustfft = "6.2.0"
opencv = { version = "0.91.0", features = ["clang-runtime"], optional = true }

wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "c2e520c", features = ["spirv", "naga-ir"] }
[target.'cfg(target_os = "windows")'.dependencies.d3d12]
git = "https://github.com/gfx-rs/wgpu.git"
rev = "c2e520c"
features = ["libloading"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
metal = { version = "0.27.0", git = "https://github.com/gfx-rs/metal-rs", rev = "ff8fd3d6dc7792852f8a015458d7e6d42d7fb352" }
objc-foundation = "0.1.1"
core-foundation-sys = "0.8.6"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.56.0"
features = [ "Win32_System_Com", "Win32_System_Console", "Win32_System_SystemServices", "Win32_UI_Shell", "Win32_Foundation", "Wdk_Foundation", "Win32_System_LibraryLoader",
             "Win32_Graphics_Dwm", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Dxgi",
             "Win32_Security", "Win32_Security_Authorization", "Win32_System_WindowsProgramming", "Win32_System_Threading", "Win32_System_Registry" ]
[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["profileapi", "libloaderapi", "windef", "winuser", "dcomp"]

[features]
default = []
use-opencl = ["ocl", "ocl-interop"]
use-opencv = ["opencv"]
bundle-lens-profiles = []

[profile.deploy]
inherits = "release"
lto = true
codegen-units = 1

[profile.profile]
inherits = "release"
debug = true

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk = { version = "0.8", features = ["media", "api-level-26"] }
ndk-sys = { version = "0.5.0" }
ndk-context = { version = "0.1.1" }

[build-dependencies]
ureq = "2.9.6"
flate2 = "1.0.28"
tar = "0.4.40"
walkdir = "2.5"
ciborium = "0.2"
serde = "1.0"
serde_json = "1.0"
