[package]
name = "gyroflow-core"
version = "1.6.3"
authors = ["Adrian <adrian.eddy@gmail.com>", "Elvin Chen"]
edition = "2021"
build = "build.rs"

[lib]
name = "gyroflow_core"
path = "lib.rs"

[dependencies]
#telemetry-parser = { path = "../../../telemetry-parser" }
telemetry-parser = { git = "https://github.com/AdrianEddy/telemetry-parser.git", rev = "8e0d229" }
#ahrs = { version = "0.5.0", features = ["field_access"] }
ahrs = { version = "0.8", features = ["field_access"] }

stabilize_spirv = { path = "./gpu/stabilize_spirv" }

#rs-sync = { path = "../../../rs-sync" }
rs-sync = { git = "https://github.com/gyroflow/rs-sync.git", rev = "5660950" }

argmin = { version = "0.10.0", git = "https://github.com/argmin-rs/argmin.git", default-features = false }
argmin-math = { version = "0.4.0", git = "https://github.com/argmin-rs/argmin.git", default-features = false, features = ["nalgebra_v0_34"] }

nalgebra = { version = "0.34", features = ["serde-serialize"] }
rayon = "1.11"
biquad = "0.5.0"
fastrand = "2.3.0"
lazy_static = "1.5.0"
parking_lot = "0.12.4"
regex = "1.11"
bincode = { version = "2.0", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
crc32fast = "1.5.0"
byteorder = "1.5.0"
line_drawing = "1.0.1"
rand = "0.9.2"
time = { version = "0.3.44", features = ["local-offset"] }
itertools = "0.14.0"
num = "0.4.3"
base91 = "0.1.0"
bitflags = "2.9.4"
enum_delegate = "0.2.0"
simple-easing = "1.0.1"
half = "2.6.0"
lru = "0.16"
thiserror = "2.0.16"
ciborium = "0.2.2"
dyn-clone = "1.0"
app_dirs2 = { git = "https://github.com/app-dirs-rs/app_dirs2.git", version = "2.5" }
whoami = "1.6.1"

akaze = { version = "*", git = "https://github.com/rust-cv/cv.git", rev = "82a25ee", features = ["rayon"] }
eight-point = { version = "*", git = "https://github.com/rust-cv/cv.git", rev = "82a25ee" }
cv-pinhole = { version = "*", git = "https://github.com/rust-cv/cv.git", rev = "82a25ee" }
cv-core = { version = "*", git = "https://github.com/rust-cv/cv.git", rev = "82a25ee" }
sample-consensus = "1.0.2"
arrsac = "0.10"
rand_xoshiro = "0.6.0"
image = { version = "0.24", default-features = false }
space = { version = "0.17", features = ["alloc"] }
bitarray = { version = "0.9", features = ["space"] }
enterpolation = "0.3.0"
libloading = "0.8"
libc = "0.2"
bytemuck = "1.23"
ash = "0.38.0"
pollster = "0.4.0"
futures-intrusive = "0.5.0"
flate2 = "1.1"
walkdir = "2.5.0"
url = "2.5.7"
urlencoding = "2.1.3"
log = "0.4"
ocl = { version = "0.19.7", optional = true }
ocl-interop = { version = "0.1.6", optional = true }
rustfft = "6.4.1"
exr = "1.73"
opencv = { version = "0.95", features = ["clang-runtime"], optional = true }
median = "0.3"

wgpu = { version = "26", features = ["spirv", "naga-ir"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
metal = { version = "0.32.0" }
objc-foundation = "0.1.1"
core-foundation-sys = "0.8.7"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58.0"
features = [ "Win32_System_Com", "Win32_System_Console", "Win32_System_SystemServices", "Win32_UI_Shell", "Win32_Foundation", "Wdk_Foundation", "Win32_System_LibraryLoader",
             "Win32_Graphics_Dwm", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Dxgi",
             "Win32_Security", "Win32_Security_Authorization", "Win32_System_WindowsProgramming", "Win32_System_Threading", "Win32_System_Registry",
             "Win32_Storage_Packaging_Appx", "Win32_Storage_FileSystem" ]

[features]
default = []
use-opencl = ["ocl", "ocl-interop"]
use-opencv = ["opencv"]
bundle-lens-profiles = []
cache-gyro-metadata = []

[profile.deploy]
inherits = "release"
lto = true
codegen-units = 1

[profile.profile]
inherits = "release"
debug = true

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk = { version = "0.9.0", features = ["media", "api-level-26"] }
ndk-sys = { version = "0.6.0" }
ndk-context = { version = "0.1.1" }

[build-dependencies]
ureq = "3.1"
