[package]
name = "shader_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
naga = { git = "https://github.com/gfx-rs/naga.git", features = ["spv-in", "wgsl-out", "glsl-out", "compact"] }
regex = "1.9.0"

[build-dependencies]
spirv-builder = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3